Finished photo component and setup grid to be responsive

--- a/src/app/components/album/album.component.html
+++ b/src/app/components/album/album.component.html
@@ -6,7 +6,7 @@
   <img mat-card-image src="./assets/img/sunset.jpg" alt="Sunset">
 
   <mat-card-content>
-    This album is upload by <em>{{author}}</em>
+    Uploaded by <em>{{author}}</em>
     <mat-card-actions>
       <button  mat-raised-button color="primary">View photos</button>
     </mat-card-actions>
