--- a/src/app/components/photos/photos.component.html
+++ b/src/app/components/photos/photos.component.html
@@ -1,5 +1,13 @@
-<pha-photo></pha-photo>
-<pha-photo></pha-photo>
-<pha-photo></pha-photo>
-<pha-photo></pha-photo>
+<div class="photos">
+  <button (click)="goBack()" mat-raised-button color="primary">Back</button>
+   <form class="search-form">
+      <mat-form-field class="search-full-width">
+        <input matInput placeholder="Search Photos">
+      </mat-form-field>
+    </form>
+  <pha-photo (remove)="onRemove()"></pha-photo>
+  <pha-photo (remove)="onRemove()"></pha-photo>
+  <pha-photo (remove)="onRemove()"></pha-photo>
+  <pha-photo (remove)="onRemove()"></pha-photo>
+</div>
 
