--- a/src/app/containers/albums/albums.component.html
+++ b/src/app/containers/albums/albums.component.html
@@ -2,13 +2,13 @@
       <form class="search-form">
       <mat-form-field class="search-full-width">
         <!-- [(ngModel)]="searchTerm" -->
-        <input matInput placeholder="Search Albums" >
+        <input matInput placeholder="Search Albums">
       </mat-form-field>
     </form>
 
     <mat-grid-list  gutterSize="30px" [cols]="breakpoint" (window:resize)="onResize($event)">
-      <mat-grid-tile *ngFor="let item of userAlbums$ | filter:searchTerm | async ">
-          <pha-album  [title]="item.title" [author]="item.user.name"></pha-album>
+      <mat-grid-tile *ngFor="let item of (userAlbums$ | async)">
+          <pha-album  [id]="item.id" [title]="item.title" [author]="item.user.name"></pha-album>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
