--- a/src/app/components/album/album.component.html
+++ b/src/app/components/album/album.component.html
@@ -8,7 +8,7 @@
   <mat-card-content>
     Uploaded by <em>{{author}}</em>
     <mat-card-actions>
-      <button  mat-raised-button color="primary">View photos</button>
+      <button [routerLink]="['/album', id]" mat-raised-button color="primary">View photos</button>
     </mat-card-actions>
   </mat-card-content>
 </mat-card>
