--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,6 +1,6 @@
 <div class="go-back">
-  <img mat-card-image src="./assets/img/sunset.jpg" alt="Sunset">
-  <h2>Sunset image</h2>
+  <img mat-card-image [src]="thumbnail">
+  <h2>{{title}}</h2>
   <div class="remove-action">
     <button mat-raised-button color="primary" (click)="remove.emit($event)">Remove Button</button>
   </div>
