--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,5 +1,5 @@
 <div class="go-back">
-  <img mat-card-image [src]="thumbnail">
+  <img [src]="thumbnail" width="150" height="150">
   <h2>{{title}}</h2>
   <div class="remove-action">
     <button mat-raised-button color="primary" (click)="remove.emit($event)">Remove Button</button>
