Refactor and move photos to containers

--- a/src/app/components/album/album.component.html
+++ b/src/app/components/album/album.component.html
@@ -1,6 +1,6 @@
-<mat-card class="album-card">
+<mat-card>
   <mat-card-header>
-    <mat-card-title>{{title}} </mat-card-title>
+    <mat-card-title>{{title}}</mat-card-title>
   </mat-card-header>
   
   <img mat-card-image src="./assets/img/sunset.jpg" alt="Sunset">
