--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -1,4 +1,4 @@
-<div class="go-back">
+<div class="photo">
   <img [src]="thumbnail" width="150" height="150">
   <h2>{{title}}</h2>
   <div class="remove-action">
