--- a/src/app/containers/albums/albums.component.html
+++ b/src/app/containers/albums/albums.component.html
@@ -1,14 +1,13 @@
-  <div class="albums">
-      <form class="search-form">
+  <div class="container albums">
+    <form class="search-form">
       <mat-form-field class="search-full-width">
-        <!-- [(ngModel)]="searchTerm" -->
-        <input matInput placeholder="Search Albums" #searchTerm>
+        <input matInput placeholder="Search Albums" #search>
       </mat-form-field>
     </form>
 
     <mat-grid-list  gutterSize="30px" [cols]="breakpoint" (window:resize)="onResize($event)">
-      <mat-grid-tile *ngFor="let item of ((userAlbums$ | async) | filter:searchTerm.value)">
-          <pha-album  [id]="item.id" [title]="item.title" [author]="item.user.name"></pha-album>
+      <mat-grid-tile *ngFor="let album of ((userAlbums$ | async) | filter:search.value)">
+          <pha-album  [id]="album.id" [title]="album.title" [author]="album.user.name"></pha-album>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
